# C-Labs

./: .gitattributes  CMakeLists.txt  main.cpp
Lab-1/Number 1/: number_1.cpp  number_1.h
Lab-1/Number 2/: number_2.cpp  number_2.h
Lab-1/Number 3/: number_3.cpp  number_3.h
Lab-2/Number 1/: number_1.h  point_a_lab2.cpp  point_b_lab2.cpp  point_c_lab2.cpp  point_d_lab2.cpp
Lab-2/Number 2/: cars.cpp  hero_direction.cpp  number_2.h  speed.cpp
Lab-2/Number 3/: dayOfWeek.cpp  daysCount.cpp  mass.cpp  number_3.h  season.cpp
Lab-2/Number 4/: bricks.cpp  number_4.h
Lab-2/Number 5/: circle.cpp  number_5.h
Lab-3/Number 1/: number_1.h  point_a_lab3.cpp  point_b_lab3.cpp  point_c_lab3.cpp  point_d_lab3.cpp
Lab-3/Number 2/: bacteria.cpp  bank.cpp  fish.cpp  number_2.h  salon.cpp
Lab-3/Number 3/: circle_coordinates.cpp  number_3.h
Lab-3/Number 4/: game.cpp  number_4.h
Lab-4/Number 1/: number_1.h  sumElements.cpp
Lab-4/Number 2/: filteredArray.cpp  geomAvg.cpp  matrixAvg.cpp  number_2.h  sumMatrixAvg.cpp  testFilterArray.cpp
Lab-4/Number 3/: number_3.h  vector.cpp
Lab-4/Number 4/: defineSize.cpp  defineSize.h
Lab-4/Number 5/: number_5.h  rangedArray.cpp
Lab-5/Number 1/: number_1.h  sqrtArray.cpp
Lab-5/Number 2/: integral.cpp  number_2.h
Lab-5/Number 3/: number_3.h  recursion.cpp
Lab-5/Number 4/: number_4.h  prisma.cpp
Lab-6/: number_1.h  structures.cpp
Lab-7/Number 1/: articles.cpp  number_1.h
Lab-7/Number 2/: dynamicArray.cpp  number_2.h
Lab-7/Number 3/: matrixMultiplication.cpp  number_3.h
Lab-7/Number 4/: dynamicStructure.cpp  number_4.h
