cmake_minimum_required(VERSION 3.29)
project(C_Labs)

set(CMAKE_CXX_STANDARD 20)

add_executable(C_Labs main.cpp
        "Lab-1/Number 1/number_1.cpp"
        "Lab-1/Number 1/number_1.h"
        "Lab-1/Number 2/number_2.cpp"
        "Lab-1/Number 2/number_2.h"
        "Lab-1/Number 3/number_3.cpp"
        "Lab-1/Number 3/number_3.h"
        "Lab-2/Number 1/point_a_lab2.cpp"
        "Lab-2/Number 1/number_1.h"
        "Lab-2/Number 1/point_b_lab2.cpp"
        "Lab-2/Number 1/point_c_lab2.cpp"
        "Lab-2/Number 1/point_d_lab2.cpp"
        "Lab-2/Number 2/cars.cpp"
        "Lab-2/Number 2/number_2.h"
        "Lab-2/Number 2/hero_direction.cpp"
        "Lab-2/Number 2/speed.cpp"
        "Lab-2/Number 3/dayOfWeek.cpp"
        "Lab-2/Number 3/number_3.h"
        "Lab-2/Number 3/season.cpp"
        "Lab-2/Number 3/daysCount.cpp"
        "Lab-2/Number 3/mass.cpp"
        "Lab-2/Number 4/bricks.cpp"
        "Lab-2/Number 4/number_4.h"
        "Lab-2/Number 5/circle.cpp"
        "Lab-2/Number 5/number_5.h"
        "Lab-3/Number 1/number_1.h"
        "Lab-3/Number 2/number_2.h"
        "Lab-3/Number 3/number_3.h"
        "Lab-3/Number 4/number_4.h"
        "Lab-3/Number 1/point_a_lab3.cpp"
        "Lab-3/Number 1/point_b_lab3.cpp"
        "Lab-3/Number 1/point_c_lab3.cpp"
        "Lab-3/Number 1/point_d_lab3.cpp"
        "Lab-3/Number 2/bacteria.cpp"
        "Lab-3/Number 2/bank.cpp"
        "Lab-3/Number 2/fish.cpp"
        "Lab-3/Number 2/salon.cpp"
        "Lab-3/Number 3/circle_coordinates.cpp"
        "Lab-3/Number 4/game.cpp"
        "Lab-4/Number 1/number_1.h"
        "Lab-4/Number 1/sumElements.cpp"
        "Lab-4/Number 2/number_2.h"
        "Lab-4/Number 2/filteredArray.cpp"
        "Lab-4/Number 2/testFilterArray.cpp"
        "Lab-4/Number 2/matrixAvg.cpp"
        "Lab-4/Number 4/defineSize.cpp"
        "Lab-4/Number 3/number_3.h"
        "Lab-4/Number 3/vector.cpp"
        "Lab-4/Number 2/sumMatrixAvg.cpp"
        "Lab-4/Number 2/geomAvg.cpp"
        "Lab-4/Number 5/number_5.h"
        "Lab-4/Number 5/rangedArray.cpp"
        "Lab-5/Number 1/number_1.h"
        "Lab-5/Number 1/sqrtArray.cpp"
        "Lab-5/Number 2/number_2.h"
        "Lab-5/Number 2/integral.cpp"
        "Lab-5/Number 3/number_3.h"
        "Lab-5/Number 3/recursion.cpp"
        "Lab-5/Number 4/number_4.h"
        "Lab-5/Number 4/prisma.cpp"
        Lab-6/number_1.h
        Lab-6/structures.cpp
        "Lab-7/Number 1/number_1.h"
        "Lab-7/Number 1/articles.cpp"
        "Lab-7/Number 2/number_2.h"
        "Lab-7/Number 2/dynamicArray.cpp"
        "Lab-7/Number 3/number_3.h"
        "Lab-7/Number 3/matrixMultiplication.cpp"
        "Lab-7/Number 4/number_4.h"
        "Lab-7/Number 4/dynamicStructure.cpp"
)
